--- a/sent.html
+++ b/sent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://tatata53531010.github.io/my_portfolio/main.css">
     <title>送信完了ページ｜CAT CAFE MIKU</title>
 </head>
 <body>
