--- a/access.html
+++ b/access.html
@@ -87,6 +87,6 @@
 <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZGGnWMz0LQ9g8Gj8nEbCuusywc-iLtqI&callback=initMap" async defer>
 </script>
-<script src="./js/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
