--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- ここまでヘッダー -->
     <!-- メイン -->
     <div id="key_visual" class="space">
-        <img src="./images/key_visual1.jpg" alt="" width="984">
+        <img src="./key_visual1.jpg" alt="" width="984">
     </div>
     <main>
         <p class="text_align pt-5">大阪駅から徒歩1分、阪急梅田駅から徒歩12分。<br>
@@ -46,19 +46,19 @@
         <div id="carousel">
             <carousel v-bind:per-page-custom="[[0, 1], [768, 2], [992, 3]]">
                 <slide>
-                <img src="./images/02.jpg" width="300" alt="内装の画像">
+                <img src="./02.jpg" width="300" alt="内装の画像">
                 </slide>
                 <slide>
-                <img src="./images/03.jpg" width="300" alt="内装の画像">
+                <img src="./03.jpg" width="300" alt="内装の画像">
                 </slide>
                 <slide>
-                <img src="./images/04.jpg" width="300" alt="内装の画像">
+                <img src="./04.jpg" width="300" alt="内装の画像">
                 </slide>
                 <slide>
-                <img src="./images/05.jpg" width="300" alt="内装の画像">
+                <img src="./05.jpg" width="300" alt="内装の画像">
                 </slide>
                 <slide>
-                    <img src="./images/06.jpg" width="300" alt="内装の画像">
+                    <img src="./06.jpg" width="300" alt="内装の画像">
                 </slide>
             </carousel>
         </div>
@@ -79,7 +79,7 @@
                     ぜひ、とっても楽しくかわいい時間を見に来てください。</p>
                 </div>
                 <div class="image_wrap">
-                    <img src="./images/ete.jpeg" alt="猫のごはんタイムの画像">
+                    <img src="./ete.jpeg" alt="猫のごはんタイムの画像">
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
                     <a href="./menu.html">※詳しくはこちら</a>
                 </p>
                 <div class="image_wrap">
-                    <img src="./images/image_02.jpg" alt="猫のおやつの画像">
+                    <img src="./image_02.jpg" alt="猫のおやつの画像">
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
         <div class="warning_wrap">
             <div class="warning_item">
                 <div class="warning_image">
-                    <img src="./images/warning1.png" alt="警告" width="180" height="180">
+                    <img src="./warning1.png" alt="警告" width="180" height="180">
                 </div>
                 <div class="warning_text">
                     <p class="text_align pt-5">猫ちゃんを追いかけたり、無理やり触ったりはしないでください。</p>
@@ -117,7 +117,7 @@
 
             <div class="warning_item">
                 <div class="warning_image">
-                    <img src="./images/warning2.png" alt="警告" width="180" height="180">
+                    <img src="./warning2.png" alt="警告" width="180" height="180">
                 </div>
                 <div class="warning_text">
                     <p class="text_align pt-5">猫ちゃんに食べ物や飲み物を与えないでください。 ※食べ物持込禁止<br>（飲み物は持込可能）</p>
@@ -126,7 +126,7 @@
 
             <div class="warning_item">
                 <div class="warning_image">
-                    <img src="./images/warning3.png" alt="警告" width="180" height="180">
+                    <img src="./warning3.png" alt="警告" width="180" height="180">
                 </div>
                 <div class="warning_text">
                     <p class="text_align pt-5">猫ちゃんを撮影するときはフラッシュをOFFにしてください。</p>
@@ -172,7 +172,7 @@
             <!-- トップに戻るボタン -->
             <a href="#" class="back-to-top">▲</a>
             <div id="background_image">
-                <img src="./images/footer-bg.png" alt="">
+                <img src="./footer-bg.png" alt="">
             </div>
     </main>
     
@@ -201,7 +201,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
 <script src="https://ssense.github.io/vue-carousel/js/vue-carousel.min.js"></script>
-<script src="./js/main.js"></script>
-<script src="./js/vue.js"></script>
+<script src="./main.js"></script>
+<script src="./vue.js"></script>
 </body>
 </html>
