--- a/access.html
+++ b/access.html
@@ -40,7 +40,7 @@
             <div id="map_wrapper">
                 <div id="map"></div>
                 <div class="map_text">
-                    <p><img src="./images/map_item.png" alt="" width="14" height="22" style="margin: 0 5px 1px 0;">住所<br>
+                    <p><img src="./map_item.png" alt="" width="14" height="22" style="margin: 0 5px 1px 0;">住所<br>
                         〒000-9999 大阪府大阪市〇〇3-30-8
                     </p>
                      <p>大阪駅 南出口から徒歩2分<br>
@@ -56,7 +56,7 @@
             <!-- トップに戻るボタン -->
             <a href="#" class="back-to-top">▲</a>
             <div id="background_image">
-                <img src="./images/footer-bg.png" alt="">
+                <img src="./footer-bg.png" alt="">
             </div>
     </main>
     <!-- ここまでメイン -->
