--- a/introduction.html
+++ b/introduction.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://tatata53531010.github.io/my_portfolio/main.css">
-    <link rel="stylesheet" href="./Magnific-Popup-master/dist/magnific-popup.css">
+    <link rel="stylesheet" href="./magnific-popup.css">
     <link rel="stylesheet" href="./animate.css">
     <title>猫ちゃん紹介｜CAT CAFE MIKU</title>
 </head>
