--- a/introduction.html
+++ b/introduction.html
@@ -435,7 +435,7 @@
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
 <script src="./Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
 <script src="./imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
-<script src="./js/Animate.js"></script>
-<script src="./js/main.js"></script>
+<script src="./Animate.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
