--- a/introduction.html
+++ b/introduction.html
@@ -433,8 +433,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
-<script src="./Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
-<script src="./imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
+<script src="./jquery.magnific-popup.min.js"></script>
+<script src="./jquery.waypoints.min.js"></script>
 <script src="./Animate.js"></script>
 <script src="./main.js"></script>
 </body>
