--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
             <div class="menu_block">
                 <div class="menu_item">
                     <div class="menu_photo">
-                        <img src="./images/cat_snack1.jpg" alt="猫のアイスの画像">
+                        <img src="./cat_snack1.jpg" alt="猫のアイスの画像">
                     </div>
                     <div class="menu_text">
                         <h3>猫のアイス</h3>
@@ -50,7 +50,7 @@
 
                 <div class="menu_item">
                     <div class="menu_photo">
-                        <img src="./images/cat_snack2.jpg" alt="ビーフジャーキーの画像">
+                        <img src="./cat_snack2.jpg" alt="ビーフジャーキーの画像">
                     </div>
                     <div class="menu_text">
                         <h3>ビーフジャーキー</h3>
@@ -61,7 +61,7 @@
 
                 <div class="menu_item">
                     <div class="menu_photo">
-                        <img src="./images/cat_snack3.jpg" alt="キャットフードの画像">
+                        <img src="./cat_snack3.jpg" alt="キャットフードの画像">
                     </div>
                     <div class="menu_text">
                         <h3>キャットフード</h3>
@@ -72,7 +72,7 @@
 
                 <div class="menu_item">
                     <div class="menu_photo">
-                        <img src="./images/cat_snack4.jpg" alt="チュールの画像">
+                        <img src="./cat_snack4.jpg" alt="チュールの画像">
                     </div>
                     <div class="menu_text">
                         <h3>チュール</h3>
@@ -84,7 +84,7 @@
                 <h2 class="pt-5">ドリンクメニュー</h2>
                 <div class="menu_item">
                     <div class="menu_photo">
-                        <img src="./images/menu-photo1.jpg" alt="オレンジジュースの画像">
+                        <img src="./menu-photo1.jpg" alt="オレンジジュースの画像">
                     </div>
                     <div class="menu_text">
                         <h3>カシスのオレンジジュース</h3>
@@ -95,7 +95,7 @@
 
                 <div class="menu_item">
                     <div class="menu_photo">
-                        <img src="./images/menu-photo2.jpg" alt="コーヒーの画像">
+                        <img src="./menu-photo2.jpg" alt="コーヒーの画像">
                     </div>
                     <div class="menu_text">
                         <h3>ホット/アイスコーヒー</h3>
@@ -108,7 +108,7 @@
             <!-- トップに戻るボタン -->
             <a href="#" class="back-to-top">▲</a>
             <div id="background_image">
-                <img src="./images/footer-bg.png" alt="">
+                <img src="./footer-bg.png" alt="">
             </div>
     </main>
     <!-- ここまでメイン -->
@@ -135,6 +135,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
-<script src="./js/main.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
