--- a/introduction.html
+++ b/introduction.html
@@ -42,8 +42,8 @@
             <ul>
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat0.jpg" class="d-inline-block">
-                            <img src="./images/cat0.jpg" alt="みくの画像">
+                        <a href="./cat0.jpg" class="d-inline-block">
+                            <img src="./cat0.jpg" alt="みくの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -56,7 +56,7 @@
                             キジトラ
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2011/05/15</small>
                         </span>
                     </div>
@@ -64,8 +64,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat1.jpg" class="d-inline-block">
-                            <img src="./images/cat1.jpg" alt="くるるの画像">
+                        <a href="./cat1.jpg" class="d-inline-block">
+                            <img src="./cat1.jpg" alt="くるるの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -77,7 +77,7 @@
                             セルカークレックス
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2017/08/01</small>
                         </span>
                     </div>
@@ -85,8 +85,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat2.jpeg" class="d-inline-block">
-                            <img src="./images/cat2.jpeg" alt="だいずの画像">
+                        <a href="./cat2.jpeg" class="d-inline-block">
+                            <img src="./cat2.jpeg" alt="だいずの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -98,7 +98,7 @@
                             ノルウェージャンフォレスト
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2017/08/12</small>
                         </span>
                     </div>
@@ -106,8 +106,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat3.jpg" class="d-inline-block">
-                            <img src="./images/cat3.jpg" alt="ミントの画像">
+                        <a href="./cat3.jpg" class="d-inline-block">
+                            <img src="./cat3.jpg" alt="ミントの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -119,7 +119,7 @@
                             アメリカンショートヘアー
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2018/03/07</small>
                         </span>
                     </div>
@@ -127,8 +127,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat4.jpg" class="d-inline-block">
-                            <img src="./images/cat4.jpg" alt="マロンの画像">
+                        <a href="./cat4.jpg" class="d-inline-block">
+                            <img src="./cat4.jpg" alt="マロンの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -140,7 +140,7 @@
                             ブリティッシュショートヘア
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2018/04/12</small>
                         </span>
                     </div>
@@ -148,8 +148,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat5.jpeg" class="d-inline-block">
-                            <img src="./images/cat5.jpeg" alt="みーくんの画像">
+                        <a href="./cat5.jpeg" class="d-inline-block">
+                            <img src="./cat5.jpeg" alt="みーくんの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -161,7 +161,7 @@
                             ミヌエット
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2018/03/20</small>
                         </span>
                     </div>
@@ -169,8 +169,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat6.jpg" class="d-inline-block">
-                            <img src="./images/cat6.jpg" alt="てんちゃんの画像">
+                        <a href="./cat6.jpg" class="d-inline-block">
+                            <img src=".cat6.jpg" alt="てんちゃんの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -182,7 +182,7 @@
                             スクーカム
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2019/03/08</small>
                         </span>
                     </div>
@@ -190,8 +190,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat7.jpg" class="d-inline-block">
-                            <img src="./images/cat7.jpg" alt="とら丸の画像">
+                        <a href="./cat7.jpg" class="d-inline-block">
+                            <img src="./cat7.jpg" alt="とら丸の画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -203,7 +203,7 @@
                             ラガマフィン
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2019/03/26</small>
                         </span>
                     </div>
@@ -211,8 +211,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat8.jpeg" class="d-inline-block">
-                            <img src="./images/cat8.jpeg" alt="くろまめの画像">
+                        <a href="./cat8.jpeg" class="d-inline-block">
+                            <img src="./cat8.jpeg" alt="くろまめの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -224,7 +224,7 @@
                             マンチカン
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2020/04/12</small>
                         </span>
                     </div>
@@ -232,8 +232,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat9.jpeg" class="d-inline-block">
-                            <img src="./images/cat9.jpeg" alt="メイの画像">
+                        <a href="./cat9.jpeg" class="d-inline-block">
+                            <img src="./cat9.jpeg" alt="メイの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -245,7 +245,7 @@
                             スコティッシュフォールド
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2020/05/04</small>
                         </span>
                     </div>
@@ -253,8 +253,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat10.jpeg" class="d-inline-block">
-                            <img src="./images/cat10.jpeg" alt="さつきの画像">
+                        <a href="./cat10.jpeg" class="d-inline-block">
+                            <img src="./cat10.jpeg" alt="さつきの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -267,7 +267,7 @@
                             ミヌエット
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2020/05/17</small>
                         </span>
                     </div>
@@ -275,8 +275,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat11.jpeg" class="d-inline-block">
-                            <img src="./images/cat11.jpeg" alt="リサの画像">
+                        <a href="./cat11.jpeg" class="d-inline-block">
+                            <img src="./cat11.jpeg" alt="リサの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -289,7 +289,7 @@
                             サイベリアン
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2020/07/01</small>
                         </span>
                     </div>
@@ -297,8 +297,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat12.jpeg" class="d-inline-block">
-                            <img src="./images/cat12.jpeg" alt="ネージュの画像">
+                        <a href="./cat12.jpeg" class="d-inline-block">
+                            <img src="./cat12.jpeg" alt="ネージュの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -311,7 +311,7 @@
                             ラグドール
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2020/07/20</small>
                         </span>
                     </div>
@@ -319,8 +319,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat13.jpg" class="d-inline-block">
-                            <img src="./images/cat13.jpg" alt="パウロの画像">
+                        <a href="./cat13.jpg" class="d-inline-block">
+                            <img src="./cat13.jpg" alt="パウロの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -333,7 +333,7 @@
                             ペルシャ
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2020/11/30</small>
                         </span>
                     </div>
@@ -341,8 +341,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat14.jpg" class="d-inline-block">
-                            <img src="./images/cat14.jpg" alt="たろうの画像">
+                        <a href="./cat14.jpg" class="d-inline-block">
+                            <img src="./cat14.jpg" alt="たろうの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -355,7 +355,7 @@
                             スコティッシュフォールド
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2021/01/01</small>
                         </span>
                     </div>
@@ -363,8 +363,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./images/cat15.jpg" class="d-inline-block">
-                            <img src="./images/cat15.jpg" alt="ルーンの画像">
+                        <a href="./cat15.jpg" class="d-inline-block">
+                            <img src="./cat15.jpg" alt="ルーンの画像">
                         </a>
                     </div>
                     <div class="cat_text">
@@ -377,7 +377,7 @@
                             ロシアンブルー
                         </span>
                         <span class="cat_birth">
-                            <img src="./images/icon.png" alt="">
+                            <img src="./icon.png" alt="">
                             <small>2021/03/24</small>
                         </span>
                     </div>
@@ -406,7 +406,7 @@
             <!-- トップに戻るボタン -->
             <a href="#" class="back-to-top">▲</a>
             <div id="background_image">
-                <img src="./images/footer-bg.png" alt="">
+                <img src="./footer-bg.png" alt="">
             </div>
     </main>
     <!-- ここまでメイン -->
