--- a/quiz.html
+++ b/quiz.html
@@ -124,7 +124,7 @@
           <!-- トップに戻るボタン -->
           <a href="#" class="back-to-top">▲</a>
           <div id="background_image">
-            <img src="./images/footer-bg.png" alt="">
+            <img src="./footer-bg.png" alt="">
         </div>
     </main>
     <!-- ここまでメイン -->
@@ -151,7 +151,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
-<script src="./js/quiz.js"></script>
-<script src="./js/main.js"></script>
+<script src="./quiz.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
