--- a/introduction.html
+++ b/introduction.html
@@ -169,7 +169,7 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="./cat6.jpg" class="d-inline-block">
+                        <a href="cat6.jpg" class="d-inline-block">
                             <img src=".cat6.jpg" alt="てんちゃんの画像">
                         </a>
                     </div>
