--- a/introduction.html
+++ b/introduction.html
@@ -169,8 +169,8 @@
 
                 <li class="animated">
                     <div class="cat_image">
-                        <a href="cat6.jpg" class="d-inline-block">
-                            <img src=".cat6.jpg" alt="てんちゃんの画像">
+                        <a href="./cat6.jpg" class="d-inline-block">
+                            <img src="./cat6.jpg" alt="てんちゃんの画像">
                         </a>
                     </div>
                     <div class="cat_text">
