--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
                 <li><a href="menu.html">メニュー</a></li>
                 <li><a href="quiz.html">クイズ</a></li>
                 <li><a href="contact.html">お問い合わせ</a></li>
+                <li><a href="profile.html">自己紹介</a></li>
             </ul>
         </div>
         <small>&copy;2021 MIKU All Rights Reserved.</small>
