--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
                 <div>
                     日本ビジネス漢字能力検定一級
                     日本ビジネス一般教養力検定一級
-                    
+                    日本ビジネス電卓技能検定一級
                 </div>
             </div>
             <p>希望職種：</p>
