--- a/profile.html
+++ b/profile.html
@@ -47,9 +47,9 @@
                     主な資格：
                 </div>
                 <div>
-                    日本ビジネス漢字能力検定一級
-                    日本ビジネス一般教養力検定一級
-                    日本ビジネス電卓技能検定一級
+                    <p>日本ビジネス漢字能力検定一級</p>
+                    <p>日本ビジネス一般教養力検定一級</p>
+                    <p>日本ビジネス電卓技能検定一級</p>
                 </div>
             </div>
             <p>希望職種：</p>
