--- a/profile.html
+++ b/profile.html
@@ -47,9 +47,10 @@
                     主な資格：
                 </div>
                 <div>
-                    <p>日本ビジネス漢字能力検定一級</p>
-                    <p>日本ビジネス一般教養力検定一級</p>
-                    <p>日本ビジネス電卓技能検定一級</p>
+                    <p>日本ビジネス漢字能力検定一級<br>
+                        日本ビジネス一般教養力検定一級<br>
+                        日本ビジネス電卓技能検定一級<br>
+                    </p>
                 </div>
             </div>
             <p>希望職種：</p>
