--- a/profile.html
+++ b/profile.html
@@ -42,8 +42,8 @@
             <p>年齢：２２歳</p>
             <p>居住地：大阪</p>
             <p>趣味：フットサル</p>
-            <div class="content_test">
-                <div>
+            <div class="profile_item">
+                <div class="line_height">
                     主な資格：
                 </div>
                 <div>
