--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
             <p>居住地：大阪</p>
             <p>趣味：フットサル</p>
             <div class="profile_item">
-                <div class="line_height">
+                <div>
                     主な資格：
                 </div>
                 <div>
