--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
             <p>
                 参考書、YouTube、Progateなどの学習サービス等を利用し約１年５ヶ月程独学しております。<br>
                 Webサイトを制作するには最低限のスキルが必要だと考えたのでHTML、CSS、JavaScriptから学び始めました。会社の募集要項などを確認するとjqueryやVue.js等のフレームワークを利用し開発している企業が多かった為、フレームワークも学んでいきました。
-                JavaScriptはオブジェクトの概念やメソッドの扱い方等難しい箇所が多く少し時間がかかりましたが、何度も反復し学び続け理解できるまで努力しました。最初の内は要素やプロパティ等を必死に覚えようとしていましたが、全てを暗記するのは物理的に難しいだろうなと感じたので、YouTubeなどを見てとりあえず色んなものを模写をしてアウトプットをして、まずは手を動かしながら学ぶように意識を変えて取り組みました。現在はPhotoshopとPHPを勉強しており、データベースを利用したWebアプリケーションを作成しようと考えております。
+                JavaScriptはオブジェクトの概念やメソッドの扱い方等難しい箇所が多く少し時間がかかりましたが、何度も反復し学び続け理解できるまで努力しました。最初の内は要素やプロパティ等を必死に覚えようとしていましたが、全てを暗記するのは物理的に難しいだろうなと感じたので、YouTubeなどを見てとりあえず色んなものを模写をしてアウトプットをして、まずは手を動かしながら学ぶように意識を変えて取り組みました。現在はPhotoshopとPHPを勉強しており、今後は予約フォーム等をアップデートしてより良いホームページに仕上げようと考えております。
             </p>
 
         <h2>プログラミング学習で詰まった時にしていた事</h2>
